@@ -6,3 +6,4 @@
     %li{class: active_tab_class('general')}= link_to t('gallery.manage.general'), "?tab=general"
     %li{class: active_tab_class('images')}= link_to t('gallery.manage.images'), "?tab=images"
     %li{class: active_tab_class('permissions')}= link_to t('gallery.manage.permissions'), "?tab=permissions"
+    %li{class: active_tab_class('preview')}= link_to t('gallery.manage.preview'), "?tab=preview"
