@@ -1,0 +1,2 @@
+.gallery.col-md-10.col-md-offset-1
+  = render_gallery_for @gallery.images, title: 'name', each_slice: 6
