@@ -2,6 +2,3 @@
 
 = render 'form'
 
-= link_to 'Show', @gallery
-\|
-= link_to 'Back', galleries_path
