@@ -1,4 +1,16 @@
 = render partial: "edit_tabs"
 
-%p TODO: permissions manager
-
+.galleries-table
+  %table.table.table-bordered.table-condensed.table-hover
+    %tr
+      %th= t('user.full_name')
+      %th= t('user.email')
+      %th
+  
+    - @gallery.permitted_users.each do |user|
+      %tr
+        %td= user.full_name
+        %td= user.email
+        %td
+          .btn-group< 
+            %p Currently no actions available
