@@ -1,0 +1,3 @@
+= render partial: "edit_tabs"
+.gallery-preview
+  =render partial: 'show'    
