@@ -1,0 +1,17 @@
+%h1= t('user.profile')
+%p
+  %b First name:
+  = @user.first_name
+%p
+  %b Name:
+  = @user.name
+%p
+  %b Email:
+  = @user.email
+%p
+  %b Role:
+  = @user.role.name
+
+= link_to 'Edit', edit_user_path(@user)
+\|
+= link_to 'Back', users_path
