@@ -6,9 +6,10 @@ PbGallery::Application.routes.draw do
   
   resources :issues
 
-  devise_for :users, path: '', path_names: {sign_in: 'login', sign_out: 'logout', registration: 'registration'}
+  devise_for :users, path: '', path_names: {sign_in: 'login', sign_out: 'logout', registration: 'register'}
   
   resources :users
+  get 'profile' => 'users#profile'
 
   resources :galleries
    
