@@ -1,0 +1,5 @@
+class AddPhotographerToGallery < ActiveRecord::Migration
+  def change
+    add_column :galleries, :photographer, :string
+  end
+end
