@@ -1,0 +1,5 @@
+class AddPermissionKeyToGallery < ActiveRecord::Migration
+  def change
+    add_column :galleries, :key, :string
+  end
+end
