@@ -11,7 +11,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20140301011000) do
+ActiveRecord::Schema.define(version: 20140301025150) do
 
   create_table "galleries", force: true do |t|
     t.string   "name"
@@ -19,6 +19,8 @@ ActiveRecord::Schema.define(version: 20140301011000) do
     t.datetime "updated_at"
     t.date     "date"
     t.integer  "owner_id"
+    t.string   "photographer"
+    t.string   "key"
   end
 
   add_index "galleries", ["owner_id"], name: "index_galleries_on_owner_id"
